tests/js/valid/enum/parses-0.buri
Color = .red | .green | .blue
myColor = Color.red
