tests/js/invalid/tag/mismatched-types-0.buri
Color = #red | #green | #blue

orange: Color = #orange